# NeonShell

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SECURITY_AUDIT.md  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
apps/desktop/: .eslintrc.cjs  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: .gitkeep  icon.icns
apps/desktop/src-tauri/src/: error.rs  history.rs  lib.rs  main.rs  state.rs
apps/desktop/src-tauri/src/ai/: commands.rs  mod.rs  provider.rs  types.rs
apps/desktop/src-tauri/src/config/: commands.rs  mod.rs  profiles.rs  settings.rs  themes.rs
apps/desktop/src-tauri/src/keychain/: commands.rs  mod.rs
apps/desktop/src-tauri/src/logging/: commands.rs  mod.rs
apps/desktop/src-tauri/src/plugins/: commands.rs  mod.rs
apps/desktop/src-tauri/src/python/: commands.rs  mod.rs
apps/desktop/src-tauri/src/sftp/: commands.rs  mod.rs
apps/desktop/src-tauri/src/ssh/: commands.rs  connection.rs  mod.rs  session.rs
apps/desktop/src/components/: CommandPalette.tsx  ConnectionDialog.tsx  HostKeyModal.tsx  ModalHost.tsx  SftpBrowser.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  TerminalPane.tsx  ToastContainer.tsx  index.ts
apps/desktop/src/lib/: api.ts  commandRegistry.ts
apps/desktop/src/stores/: aiStore.ts  appStore.ts  logStore.ts  sessionStore.ts  settingsStore.ts  sftpStore.ts  themeStore.ts  uiStore.ts
plugins/starter-plugin/: README.md  index.js  manifest.json
scripts/examples/: auto_tmux.py  bastion_rotate.py  host_health.py  kubectl_helper.py  port_forward_toggle.py  redact_sensitive.py  snippet_expander.py  tail_logs.py
scripts/neonshell/: __init__.py
themes/cyberpunk/: styles.css  theme.json
themes/dracula/: styles.css  theme.json
themes/monokai/: styles.css  theme.json
themes/nord/: styles.css  theme.json
(+9 files in other folders)
