[package]
name = "neonshell"
version = "0.2.0"
description = "OG Myspace for SSH nerds - A fast, stable, extremely customizable SSH terminal"
authors = ["NeonShell Contributors"]
license = "MIT"
repository = "https://github.com/yourorg/neonshell"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"

# SSH - using ssh2 (libssh2 bindings) for mature, cross-platform support
ssh2 = "0.9"
# Base64 for key handling
base64 = "0.22"
# Hex for fingerprints
hex = "0.4"
# SHA2 for fingerprint computation  
sha2 = "0.10"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"

# Keychain / Secret storage
keyring = "2"

# Utils
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
once_cell = "1"
parking_lot = "0.12"
dashmap = "5"

# Config validation
jsonschema = "0.17"

# Zip files for pack export/import
zip = "0.6"

# Compression for terminal history
flate2 = "1.0"

# Regex for log sanitization
regex = "1"

# For plugin sandbox
wasmtime = { version = "17", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_Security_Credentials"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
wasm-plugins = ["wasmtime"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true

